[gd_scene load_steps=10 format=2]

[ext_resource path="res://levels/welcome_screen.png" type="Texture" id=1]
[ext_resource path="res://objects/gui/font_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://levels/play_button.gd" type="Script" id=3]
[ext_resource path="res://levels/mode_button_group.tres" type="ButtonGroup" id=4]
[ext_resource path="res://levels/player_options.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/mode_button.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.541176, 0.815686, 0.541176, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.184314, 0.501961, 0.211765, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.301961, 0.658824, 0.207843, 1 )

[node name="welcome_screen" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gui" type="VBoxContainer" parent="."]
margin_left = 89.0
margin_top = 235.0
margin_right = 787.0
margin_bottom = 905.0
custom_constants/separation = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings_group" type="HBoxContainer" parent="gui"]
margin_right = 698.0
margin_bottom = 496.0
size_flags_vertical = 3
custom_constants/separation = 24

[node name="difficulty_group" type="VBoxContainer" parent="gui/settings_group"]
margin_right = 250.0
margin_bottom = 496.0
rect_min_size = Vector2( 250, 0 )
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="easy_button" type="Button" parent="gui/settings_group/difficulty_group"]
margin_right = 250.0
margin_bottom = 115.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
group = ExtResource( 4 )
text = "Easy"
script = ExtResource( 6 )
mode = 0

[node name="normal_button" type="Button" parent="gui/settings_group/difficulty_group"]
margin_top = 127.0
margin_right = 250.0
margin_bottom = 242.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
pressed = true
group = ExtResource( 4 )
text = "Normal"
script = ExtResource( 6 )

[node name="hard_button" type="Button" parent="gui/settings_group/difficulty_group"]
margin_top = 254.0
margin_right = 250.0
margin_bottom = 369.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
group = ExtResource( 4 )
text = "Hard"
script = ExtResource( 6 )
mode = 2

[node name="endless_button" type="Button" parent="gui/settings_group/difficulty_group"]
margin_top = 381.0
margin_right = 250.0
margin_bottom = 496.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
group = ExtResource( 4 )
text = "Endless"
script = ExtResource( 6 )
mode = 3

[node name="player_group" type="VBoxContainer" parent="gui/settings_group"]
margin_left = 274.0
margin_right = 698.0
margin_bottom = 496.0
size_flags_horizontal = 3
custom_constants/separation = 24

[node name="player_1_options" parent="gui/settings_group/player_group" instance=ExtResource( 5 )]

[node name="player_2_options" parent="gui/settings_group/player_group" instance=ExtResource( 5 )]
margin_top = 104.0
margin_bottom = 184.0
player_index = 1
enabled = false

[node name="player_3_options" parent="gui/settings_group/player_group" instance=ExtResource( 5 )]
margin_top = 208.0
margin_bottom = 288.0
player_index = 2
enabled = false

[node name="player_4_options" parent="gui/settings_group/player_group" instance=ExtResource( 5 )]
margin_top = 312.0
margin_bottom = 392.0
player_index = 3
enabled = false

[node name="play_button" type="Button" parent="gui"]
margin_top = 520.0
margin_right = 698.0
margin_bottom = 670.0
rect_min_size = Vector2( 0, 150 )
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Play"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
